--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,9 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+	// https://mvnrepository.com/artifact/org.springframework/spring-test
+	testCompile group: 'org.springframework', name: 'spring-test', version: "${springVersion}"
+	// https://mvnrepository.com/artifact/com.github.stefanbirkner/system-rules
+	testCompile group: 'com.github.stefanbirkner', name: 'system-rules', version: '1.16.1'
+	
 }
